<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_inicio"
            android:icon="@drawable/baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_peliculas"
            android:icon="@drawable/baseline_movie_24"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_series"
            android:icon="@drawable/baseline_live_tv_24"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_trailers"
            android:icon="@drawable/baseline_smart_display_24"
            android:title="@string/menu_trailers" />
    </group>
</menu>